--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@eslint/js": "^9.24.0",
+    "eslint": "^9.24.0",
+    "globals": "^16.0.0",
     "typescript": "^5.8.2",
+    "typescript-eslint": "^8.29.0",
     "vite": "^6.2.4"
   }
 }
