--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.24.0",
-    "eslint": "^9.24.0",
-    "globals": "^16.0.0",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.29.0",
-    "vite": "^6.2.4"
-  }
+	"name": "frontend",
+	"private": true,
+	"version": "0.0.0",
+	"scripts": {
+		"dev": "vite",
+		"lint": "eslint src --ext .ts",
+		"build": "tsc && vite build",
+		"preview": "vite preview"
+	},
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^7.18.0",
+		"@typescript-eslint/parser": "^7.18.0",
+		"eslint": "^8.57.1",
+		"eslint-config-airbnb-typescript": "^18.0.0",
+		"eslint-plugin-import": "^2.31.0",
+		"typescript": "^5.8.3",
+		"vite": "^6.2.5"
+	}
 }
